/* Copyright (c) 2010-2011 Stanford University
 *
 * Permission to use, copy, modify, and distribute this software for any
 * purpose with or without fee is hereby granted, provided that the above
 * copyright notice and this permission notice appear in all copies.
 *
 * THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR(S) DISCLAIM ALL WARRANTIES
 * WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF
 * MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL AUTHORS BE LIABLE FOR
 * ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
 * WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
 * ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 * OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 */

import "MasterRecoveryInfo.proto";

package RAMCloud.ProtoBuf;

// The information appended to LogCabin by the Coordinator
// to store updates for each server.
message ServerUpdate {

    /// Entry type for this LogCabin entry.
    required string entry_type = 1;

	/// The server id of the server.
    required fixed64 server_id = 2;

    /// Information stored in the server list which is used during master
    /// recovery to prevent stale/lost replicas from being used.
    required MasterRecoveryInfo master_recovery_info = 3;

    /// The new replicationId of the server.
    optional fixed64 replication_id = 4;
}
